<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:background="@drawable/login_bg">

    <RelativeLayout
        android:id="@+id/usr_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/head"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:src="@drawable/head"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20sp"
        android:layout_below="@id/usr_icon">

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/phone"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:inputType="phone"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/phone"
            android:background="@drawable/edit_text_border"
            android:textSize="14sp"
            android:padding="10sp"
        />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_below="@+id/linearlayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/etCode"
                android:layout_width="210dp"
                android:layout_height="40sp"
                android:inputType="number"
                android:singleLine="true"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/code"
                android:background="@drawable/edit_text_border"
                android:textSize="14sp"
                android:padding="10sp"/>

            <Button
                android:id="@+id/btnGetCode"
                android:layout_width="80dp"
                android:layout_height="40sp"
                android:text="@string/get_code"
                android:textSize="12sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:background="@drawable/code_btn_border"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:layout_toRightOf="@id/etCode"
                />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_below="@id/linearlayout2"
        android:gravity="center"
        android:paddingTop="10dp"
        >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textColor="#fff"
            android:background="@drawable/check_border"

            />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:text="注册"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textColor="#fff"
            android:background="@drawable/check_border"

            />

    </LinearLayout>



</RelativeLayout>