<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:padding="5dip"
    android:paddingBottom="20dip"
    android:layout_marginBottom="2sp"
    android:background="@color/white"
    >

    <!--<TextView-->
        <!--android:id="@+id/record_num"-->
        <!--android:layout_width="50sp"-->
        <!--android:layout_height="50sp"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginTop="5dip"-->
        <!--android:gravity="center"-->
        <!--android:text="1"-->
        <!--android:textSize="40sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dip"
        android:orientation="vertical"
        android:padding="1dip">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dip">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:text="快递简介"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:text="2017-10-31"
                android:textSize="9sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#EFEFEF"
            android:padding="1dip" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="(订单详细介绍)"
            android:textSize="13sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0,1,2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dip">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_marginTop="15sp">

                <Button
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/func_btn_border"
                    android:layout_marginRight="5dp"
                    android:text="@string/extend_order"
                    android:textSize="10sp"/>

                <Button
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/func_btn_border"
                    android:layout_marginRight="5dp"
                    android:text="@string/complain"
                    android:textSize="10sp"/>

                <Button
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/func_btn_border"
                    android:text="@string/confirm_order"
                    android:layout_marginRight="5dp"
                    android:textSize="10sp"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>